# lr_in_cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
include/: dataset.hpp  linear_regression.hpp  utils.hpp
src/: dataset.cpp  linear_regression.cpp  utils.cpp
